# verifier-contract

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/contract_data/: comment.rs  github_data.rs  mod.rs  vote.rs
src/verified_contract/: comment.rs  github.rs  mod.rs
tests/: test_basics.rs
