[package]
name = "verifier-contract"
description = "cargo-near-new-project-description"
version = "0.1.0"
edition = "2021"
# TODO: Fill out the repository field to help NEAR ecosystem tools to discover your project.
# NEP-0330 is automatically implemented for all contracts built with near-sdk-rs.
# Link to the repository will be available via `contract_source_metadata` view-function.
#repository = "https://github.com/xxx/xxx"

[lib]
crate-type = ["cdylib", "rlib"]

[patch.crates-io]
parity-secp256k1 = { git = "https://github.com/SourceScan/rust-secp256k1", branch = "master" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = "4.1.1"
serde_json = { version = "1.0", features = ["preserve_order"] }

[dev-dependencies]
near-workspaces = { version = "0.9.0", default-features = false, features = ["install", "unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
